this is final commit

--- a/App/Index.html
+++ b/App/Index.html
@@ -23,13 +23,14 @@
     <link  href="image/">
     <!--<script type="text/javascript" src="angular11.js"></script>-->
 <meta charset="ISO-8859-1">
-<title>music world</title>
+
 <link rel="stylesheet"
 	href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 </head >
 <body id="part3" >
 <w3-test-directive></w3-test-directive>
+<h1>heellooo</h1>
 			<div ng-view ></div>
 <script src="resultService.js" ></script>
 <!--<script src="loginPage/controller/loginPage.js"></script>-->
